chat-eks/Kubernetes/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${CHAT_NAMESPACE}
  name: ${CHAT_DEPLOYMENT_NAME}
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${CHAT_APP_NAME}
      namespace: ${CHAT_NAMESPACE}
      cloud.google.com/gke-nodepool: swis-ng #  ${CHAT_NODE_GROUP}
  replicas: ${CHAT_MIN_REP}
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${CHAT_APP_NAME}
        namespace: ${CHAT_NAMESPACE}
        cloud.google.com/gke-nodepool: swis-ng # ${CHAT_NODE_GROUP}
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/experiencedotcom-devops/experiencedotcom-dev/chat:latest
          imagePullPolicy: Always
          name: ${CHAT_APP_NAME}
          ports:
            - containerPort: 6000
          resources:
            requests:
              cpu: ${CHAT_REQ_CPU}
              memory: ${CHAT_REQ_MEM}
            limits:
              cpu: ${CHAT_LIM_CPU}
              memory: ${CHAT_LIM_MEM}
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 6000
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 10
      #     volumeMounts:
      #       - mountPath: /storage
      #         name: ${CHAT_VOLUME}
      #       - mountPath: /etc/nginx/nginx.conf
      #         name: nginx-conf
      #         subPath: nginx.conf
      #         readOnly: true
      # volumes:
      #   - name: ${CHAT_VOLUME}
      #     persistentVolumeClaim:
      #       claimName: ${CHAT_PVC}
      #   - name: nginx-conf
      #     configMap:
      #       name: nginxconfig
      #       items:
      #         - key: nginx.conf
      #           path: nginx.conf
      nodeSelector:
        cloud.google.com/gke-nodepool: swis-ng # ${CHAT_NODE_GROUP}
